--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -40,6 +40,18 @@
   file:
     path: "{{ lookup('env', 'HOME') }}/.vim/autoload"
     state: directory
+- name: create backup directory
+  file:
+    path: "{{ lookup('env', 'HOME') }}/.vim-tmp/backup"
+    state: directory
+- name: create swap directory
+  file:
+    path: "{{ lookup('env', 'HOME') }}/.vim-tmp/swap"
+    state: directory
+- name: create undo directory
+  file:
+    path: "{{ lookup('env', 'HOME') }}/.vim-tmp/undo"
+    state: directory
 - name: download vim-plug
   get_url:
     url: https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
