--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -6,6 +6,8 @@
     - libpython3.6-dev
     - nodejs
     - yarn
+    - libxt-dev
+    - silversearcher-ag
   become: yes
 - name: make sure src directory exists
   file:
@@ -18,7 +20,7 @@
     remote_src: yes
     creates: "{{ src }}"
 - name: configure
-  command: ./configure --enable-multibyte --enable-rubyinterp=yes --enable-python3interp=yes --with-python3-config-dir=/usr/lib/python3.6/config-3.6m-x86_64-linux-gnu --with-tlib=ncurses
+  command: ./configure --enable-multibyte --enable-rubyinterp=yes --enable-python3interp=yes --with-python3-config-dir=/usr/lib/python3.6/config-3.6m-x86_64-linux-gnu --with-tlib=ncurses --with-x
   args:
     chdir: "{{ src }}"
 - name: build
