--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -2,3 +2,12 @@
   apt:
     pkg:
       - redshift
+
+- name: install the spotify command-line script
+  get_url:
+    url: https://gist.githubusercontent.com/wandernauta/6800547/raw/2c2ad0f3849b1b1cd1116b80718d986f1c1e7966/sp
+    dest: /usr/local/bin/sp
+    owner: root
+    group: root
+    mode: u=rwx,g=rx,o=rx
+  become: yes
