--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -2,10 +2,17 @@
   apt:
     pkg:
       - redshift
+  become: yes
+
+- name: install fd-find
+  apt:
+    deb: https://github.com/sharkdp/fd/releases/download/v7.4.0/fd_7.4.0_amd64.deb
+    state: present
+  become: yes
 
 - name: install the spotify command-line script
   get_url:
-    url: https://gist.githubusercontent.com/wandernauta/6800547/raw/2c2ad0f3849b1b1cd1116b80718d986f1c1e7966/sp
+    url: "https://gist.githubusercontent.com/wandernauta/6800547/raw/2c2ad0f3849b1b1cd1116b80718d986f1c1e7966/sp"
     dest: /usr/local/bin/sp
     owner: root
     group: root
@@ -27,3 +34,4 @@
 - name: install spotify
   snap:
     name: spotify
+  become: yes
