--- a/roles/dwm/tasks/main.yml
+++ b/roles/dwm/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: install prerequisites
+  apt:
+    name: ['libx11-dev', 'libxft-dev', 'libxinerama-dev']
+    state: present
+  become: yes
+
 - name: make sure ~/src exists for clones
   file:
     path: ~/src
