--- a/roles/systemd/tasks/main.yml
+++ b/roles/systemd/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: enable statusbar
   systemd:
     scope: user
-    name: statusbar.service
+    name: statusbar
     enabled: yes
 - name: start statusbar
   systemd:
