--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -1,13 +1,8 @@
 - name: install dependencies
   apt:
-    name: "{{ item }}"
-  with_items:
-    - libncurses-dev
-    - libpython3.6-dev
-    - nodejs
-    - yarn
-    - libxt-dev
-    - silversearcher-ag
+    name: ['libncurses-dev', 'libpython3.6-dev', 'nodejs', 'yarn', 'libxt-dev', 'silversearcher-ag']
+    state: present
+    update_cache: yes
   become: yes
 
 - name: make sure src directory exists
@@ -61,3 +56,12 @@
   get_url:
     url: https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
     dest: "{{ lookup('env', 'HOME') }}/.vim/autoload/plug.vim"
+
+- name: copy coc settings
+  file:
+    src: "{{ role_path }}/files/coc-settings.json"
+    path: "{{ lookup('env', 'HOME') }}/.vim/coc-settings.json"
+    state: link
+
+- name: install plugins
+  command: vim +PlugInstall +qall
