--- a/roles/gpg/tasks/main.yml
+++ b/roles/gpg/tasks/main.yml
@@ -1,9 +1,17 @@
+- name: install dependencies
+  apt:
+    name:
+      - pinentry-tty
+    state: present
+  become: yes
+
 - name: make sure there's a config directory
   file:
-    path: "{{ lookup('env', 'USER') }}/.gnupg"
+    path: "{{ dest }}"
     state: directory
+
 - name: link gpg agent config
   file:
     src: "{{ role_path }}/files/gpg-agent.conf"
-    path: "{{ lookup('env', 'USER') }}/.gnupg/gpg-agent.conf"
+    path: "{{ dest }}/gpg-agent.conf"
     state: link
