--- a/roles/dmenu/tasks/main.yml
+++ b/roles/dmenu/tasks/main.yml
@@ -1,19 +1,19 @@
-- name: remove any prior clone
-  file:
-    path: ~/src/dmenu
-    state: absent
-- name: clone dwm repository
+- name: clone repository
   git:
-    repo: git://git.suckless.org/dmenu
-    dest: ~/src/dmenu
-    update: yes
-    force: yes
-    version: 4.9
+    repo: "git://{{ uri }}"
+    dest: "{{ src }}"
+    version: "{{ version }}"
+
 - name: build
   make:
-    chdir: ~/src/dmenu
+    chdir: "{{ src }}"
+    params:
+      j: 4
+  changed_when: false
+
 - name: install
   make:
     chdir: "{{ lookup('env', 'HOME') }}/src/dmenu"
     target: install
   become: yes
+  changed_when: false
