--- a/roles/tmux/tasks/main.yml
+++ b/roles/tmux/tasks/main.yml
@@ -1,11 +1,7 @@
 - name: install packages
   apt:
-    name: "{{ item }}"
-  with_items:
-    - tmux
-    - tmux-plugin-manager
-    - tmuxinator
-    - urlview
+    name: ['tmux', 'tmux-plugin-manager', 'tmuxinator', 'urlview']
+    state: present
   become: yes
 - name: ~/.tmux.conf
   file:
